#Nmap Changelog ($Id$); -*-text-*-

o [GH#2183][GH#3239] Script hostmap-crtsh now reports only true subdomains
  of a given target hostname by default. In the past, it was reporting any
  DNS name that included the target hostname as a substring (but not
  necessarily as a suffix). The old behavior can be enabled by setting script
  argument hostmap-crtsh.lax. [Sweekar-cmd, nnposter]

o [GH#3191][GH#3218] Script http-internal-ip-disclosure has been enhanced,
  including added support for IPv6 and HTTPS and more accurate processing
  of target responses. [nnposter]

o [GH#3194] RPC-based scripts were sporadically failing due to privileged
  port conflicts. [nnposter]

o [GH#3196] Script rlogin-brute was sporadically failing due to using
  an off-by-one range for privileged ports and not handling potential
  port conflicts. [nnposter]

Nmap 7.98 [2025-08-21]

o [SECURITY] Rebuilt the Windows self-installer with NSIS 3.11, addressing
  CVE-2025-43715--a race condition in earlier NSIS versions that could allow
  local attackers to escalate to SYSTEM privileges when a vulnerable installer is
  run as SYSTEM. The Nmap installer does not run as SYSTEM by default.

o Upgraded included libraries: OpenSSL 3.0.17, Lua 5.4.8

o [Windows] Upgraded the included version of Npcap from 1.82 to 1.83, improving
  compatibility with PPPoE connections. See https://npcap.com/changelog

o [macOS][GH#3127] Fix "dnet: Failed to open device en0" errors on macOS since
  Nmap 7.96. [Daniel Miller]

o Fixed an issue in FTP bounce scan where a single null byte is written past
  the end of the receive buffer. The issue is triggered by a malicious server
  but does not cause a crash with default builds. [Tyler Zars]

o [GH#3130] Fix a crash (stack exhaustion due to excessive recursion) in the
  parallel DNS resolver. Additionally, improved performance by processing
  responses that come after the request has timed out. [Daniel Miller]
